# Haskell-MFAPipe-Executable

./: .gitignore  LICENSE  MFAPipe.cabal  README.md  run_examples.sh  stack.yaml
MFAPipe/: LICENSE  MFAPipe.cabal  MFAPipe.cabal.old  README.md
MFAPipe/app/: Main.hs
MFAPipe/app/MFAPipe/: Command.hs  MFA.hs  Version.hs
MFAPipe/app/MFAPipe/Csv/: Constants.hs
MFAPipe/app/MFAPipe/Csv/Types/: ContributionMatrix.hs  MassFractionVector.hs  Parameters.hs  Residual.hs  Statistics.hs
MFAPipe/src/Control/Comonad/Trans/: Rall.hs
MFAPipe/src/Data/: Injective.hs
MFAPipe/src/Data/Graph/Inductive/Graph/: Instances.hs
MFAPipe/src/Data/Graph/Inductive/Query/DFS/: EdgeSmoothing.hs
MFAPipe/src/Data/Monoid/: EndoM.hs
MFAPipe/src/Language/INCA/: Constants.hs
MFAPipe/src/Language/INCA/Conversion/: Text.hs
MFAPipe/src/MFAPipe/: FBA.hs  MFA.hs  Utils.hs
MFAPipe/src/MFAPipe/Csv/: Constants.hs
MFAPipe/src/MFAPipe/Csv/Types/: EMUReactionNetwork.hs  Flux.hs  FluxCovarianceMatrix.hs  Stoichiometry.hs
MFAPipe/src/Numeric/LevMar/Extras/: LevMar.hs
MFAPipe/src/Numeric/LinearAlgebra/HMatrix/Algorithms/: GaussJordan.hs
MFAPipe/src/Science/Chemistry/: IsotopicLabeling.hs  ReactionNetwork.hs  Stoichiometry.hs  Types.hs
MFAPipe/src/Science/Chemistry/EMU/: EMU.hs  EMUGraph.hs
MFAPipe/src/Science/Chemistry/EMU/Factorized/: Class.hs
MFAPipe/src/Science/Chemistry/EMU/IsotopicLabeling/: SteadyState.hs
MFAPipe/src/Science/Chemistry/EMU/IsotopicLabeling/DSL/Evaluate/: Class.hs
MFAPipe/src/Science/Chemistry/IsotopicLabeling/: FractionMatrix.hs  FractionType.hs  FractionTypeDict.hs  FractionVector.hs  Isotopomer.hs  IsotopomerFractionMatrix.hs  IsotopomerFractionVector.hs  MassFractionMatrix.hs  MassFractionVector.hs  SteadyState.hs
MFAPipe/src/Science/Chemistry/IsotopicLabeling/DSL/Display/: Class.hs
MFAPipe/src/Science/Chemistry/IsotopicLabeling/DSL/FromDict/: Class.hs
MonadRandom-instances/: MonadRandom-instances.cabal
MonadRandom-instances/src/Control/Monad/Random/: Instances.hs
MonadRandom-logger-instances/: MonadRandom-logger-instances.cabal  README.md
MonadRandom-logger-instances/src/Control/Monad/Random/Logger/: Instances.hs
Rall/: README.md  Rall.cabal
etc/workshops/MPA2017/: README.md
examples/: Antoniewicz2006.json  Rios2007.json
examples/mfa-levmar/: Antoniewicz2007.json  Crown2012.json
fgl-algorithms-edge-smoothing/: README.md  fgl-algorithms-edge-smoothing.cabal
fgl-algorithms-subgraph/: README.md  fgl-algorithms-subgraph.cabal
fgl-algorithms-subgraph/src/Data/Graph/Inductive/Query/DFS/: Subgraph.hs
fgl-extras/: README.md  fgl-extras.cabal
fgl-extras/src/Data/Graph/Inductive/Graph/Extras/Node/: Strict.hs
fgl-instances/: README.md  fgl-instances.cabal
fgl-lens/: README.md  fgl-lens.cabal
fgl-lens/src/Data/Graph/Inductive/Graph/: Lens.hs
hmatrix-algorithms-gauss-jordan/: README.md  hmatrix-algorithms-gauss-jordan.cabal
hmatrix-lens/: README.md  hmatrix-lens.cabal
hmatrix-monoids/: README.md  hmatrix-monoids.cabal
injective/: README.md  injective.cabal
injective-numeric/: README.md  injective-numeric.cabal
injective-numeric/src/Data/Injective/: Numeric.hs
injective/src/Data/: Injective.hs
levmar-extras/: README.md  levmar-extras.cabal
levmar-extras/src/Numeric/LevMar/Extras/: LevMar.hs
list-extras-at/: README.md  list-extras-at.cabal
list-extras-at/src/Data/List/Extras/: At.hs
list-extras-zipper/: README.md  list-extras-zipper.cabal
list-extras-zipper/src/Data/List/Extras/: Zipper.hs
logger-instances/: README.md  logger-instances.cabal
logger-instances/src/System/Log/Logger/: Instances.hs
src/: Main.hs
src/Control/Comonad/Trans/: Rall.hs
src/Control/Monad/Random/: Instances.hs
src/Data/: Injective.hs
src/Data/Functor/Classes/: Monoid1.hs
src/Data/Graph/Inductive/Graph/: Instances.hs  Lens.hs
src/Data/Graph/Inductive/Graph/Extras/: Node.hs
src/Data/Graph/Inductive/Graph/Extras/Node/: Strict.hs
src/Data/Graph/Inductive/Query/DFS/: EdgeSmoothing.hs  Subgraph.hs
src/Data/List/: Extras.hs
src/Data/Monoid/: CartProduct.hs  Conv.hs  Conv2.hs  EndoM.hs  Kronecker.hs
src/Language/FluxJS/: Types.hs
src/Language/FluxJS/Conversion/: Text.hs
src/Language/INCA/: Constants.hs  Types.hs
src/Language/INCA/Conversion/: Text.hs
src/Language/INCA/Parser/: Text.hs
src/MFAPipe/: Banner.hs  Command.hs  FBA.hs  MFA.hs  Utils.hs  Version.hs  Warranty.hs
src/MFAPipe/Csv/: Constants.hs
src/MFAPipe/Csv/Types/: Info.hs  IsotopomerFractionVector.hs  JacobianMatrix.hs  NullspaceMatrix.hs  ObjectiveFunction.hs  ReactionNetwork.hs  Statistics.hs
src/Numeric/LevMar/Extras/: LevMar.hs
src/Numeric/LinearAlgebra/HMatrix/: Lens.hs
src/Science/Chemistry/: EMU.hs  FluxVar.hs  FluxVar.hs.old  IsotopicLabeling.hs  MetaboliteVar.hs  Reaction.hs  ReactionNetwork.hs  Stoichiometry.hs  Types.hs
src/Science/Chemistry/EMU/: EMU.hs  EMUGraph.hs  EMUReaction.hs  EMUReactionNetwork.hs
src/Science/Chemistry/EMU/Factorized/: Class.hs
src/Science/Chemistry/EMU/HasSize/: Class.hs
src/Science/Chemistry/EMU/IsotopicLabeling/: SteadyState.hs
src/Science/Chemistry/EMU/Optimized/: Class.hs
src/Science/Chemistry/IsotopicLabeling/: FractionMatrix.hs  FractionType.hs  FractionTypeDict.hs  FractionVector.hs  Isotopomer.hs  IsotopomerFractionMatrix.hs  IsotopomerFractionVector.hs  MassFraction.hs  MassFractionMatrix.hs  MassFractionVector.hs
src/Science/Chemistry/IsotopicLabeling/DSL/Display/: Class.hs
src/Science/Chemistry/IsotopicLabeling/DSL/FromDict/: Class.hs
src/Science/Chemistry/Parser/: Text.hs
src/System/Log/Logger/: Instances.hs
src/Text/PrettyPrint/Leijen/Text/: Instances.hs
