name:
  MFAPipe
version:
  0.1.0.0
synopsis:
  Metabolic flux analysis and flux balance analysis
description:
  MFAPipe is a command line application for parallel labeling, steady state
  Metabolic Flux Analysis (MFA) and Flux Balance Analysis (FBA), using the
  stoichiometric paradigm and Elementary Metabolite Units (EMU) method.
bug-reports:
  https://github.com/markborkum/Haskell-MFAPipe-Executable/issues
license:
  ECL-2.0
license-file:
  LICENSE
author:
  Mark Borkum
maintainer:
  mark.borkum@pnnl.gov
copyright:
  2016 Pacific Northwest National Laboratory
category:
  Bioinformatics, Chemistry, Science
build-type:
  Simple
extra-source-files:
  README.md
  examples/*
cabal-version:
  >= 1.10
source-repository head
  type: git
  location: https://github.com/markborkum/Haskell-MFAPipe-Executable

executable mfaPipe
  main-is:
    Main.hs
  
  build-depends:
    aeson                >= 0.7.0.5  && < 0.12,
    attoparsec           == 0.13.*            ,
    base                 >= 4.8      && < 4.9 ,
    bifunctors           >= 5        && < 6   ,
    bytestring           >= 0.10.4.0 && < 0.11,
    cassava              >= 0.4.0.0  && < 0.5 ,
    cmdargs              >= 0.10     && < 0.11,
    comonad              >= 4        && < 6   ,
    containers           >= 0.4.0    && < 0.6 ,
    data-default         >= 0.5               ,
    fgl                  >= 5.5.0.0  && < 5.6 ,
    glpk-hs              >= 0.3      && < 0.4 ,
    hmatrix              >= 0.12     && < 0.17,
    lens                 >= 4.4      && < 5   ,
    levmar               >= 1.2      && < 1.3 ,
    logger               >= 0.1.0.1  && < 0.2 ,
    MonadRandom          >= 0.4      && < 0.5 ,
    monad-parallel       >= 0.7      && < 0.8 ,
    mtl                  >= 2.1      && < 2.3 ,
    parallel             >= 3.2      && < 3.3 ,
    profunctors          == 5.*               ,
    random               >= 1        && < 2   ,
    statistics           >= 0.13     && < 0.14,
    text                 >= 1.1.1.3           ,
    transformers         >= 0.3      && < 0.5 ,
    unordered-containers >= 0.2.5.0  && < 0.3 ,
    vector               >= 0.10     && < 0.11,
    wl-pprint-text       >= 1.1      && < 1.2 ,
    zip-archive          >= 0.2.3    && < 0.3
  
  other-modules:
    Control.Comonad.Trans.Rall
    Control.Monad.Random.Instances
    Data.Functor.Classes.Monoid1
    Data.Graph.Inductive.Graph.Extras.Node
    Data.Graph.Inductive.Graph.Extras.Node.Strict
    Data.Graph.Inductive.Graph.Instances
    Data.Graph.Inductive.Graph.Lens
    Data.Graph.Inductive.Query.DFS.EdgeSmoothing
    Data.Graph.Inductive.Query.DFS.Subgraph
    Data.Injective
    Data.List.Extras
    Data.Monoid.CartProduct
    Data.Monoid.Conv
    Data.Monoid.Conv2
    Data.Monoid.EndoM
    Data.Monoid.Kronecker
    Language.FluxJS.Conversion.Text
    Language.FluxJS.Types
    Language.INCA.Constants
    Language.INCA.Conversion.Text
    Language.INCA.Parser.Text
    Language.INCA.Types
    MFAPipe.Banner
    MFAPipe.Command
    MFAPipe.Csv.Constants
    MFAPipe.Csv.Types.ContributionMatrix
    MFAPipe.Csv.Types.EMUReactionNetwork
    MFAPipe.Csv.Types.Flux
    MFAPipe.Csv.Types.FluxCovarianceMatrix
    MFAPipe.Csv.Types.Info
    MFAPipe.Csv.Types.IsotopomerFractionVector
    MFAPipe.Csv.Types.JacobianMatrix
    MFAPipe.Csv.Types.MassFractionVector
    MFAPipe.Csv.Types.NullspaceMatrix
    MFAPipe.Csv.Types.ObjectiveFunction
    MFAPipe.Csv.Types.ReactionNetwork
    MFAPipe.Csv.Types.Residual
    MFAPipe.Csv.Types.Statistics
    MFAPipe.Csv.Types.Stoichiometry
    MFAPipe.FBA
    MFAPipe.MFA
    MFAPipe.Utils
    MFAPipe.Version
    MFAPipe.Warranty
    Numeric.LevMar.Extras.LevMar
    Numeric.LinearAlgebra.HMatrix.Algorithms.GaussJordan
    Numeric.LinearAlgebra.HMatrix.Lens
    Science.Chemistry.EMU
    Science.Chemistry.EMU.EMU
    Science.Chemistry.EMU.EMUGraph
    Science.Chemistry.EMU.EMUReaction
    Science.Chemistry.EMU.EMUReactionNetwork
    Science.Chemistry.EMU.Factorized.Class
    Science.Chemistry.EMU.HasSize.Class
    Science.Chemistry.EMU.IsotopicLabeling.DSL.Evaluate.Class
    Science.Chemistry.EMU.IsotopicLabeling.SteadyState
    Science.Chemistry.EMU.Optimized.Class
    Science.Chemistry.FluxVar
    Science.Chemistry.IsotopicLabeling
    Science.Chemistry.IsotopicLabeling.DSL.Display.Class
    Science.Chemistry.IsotopicLabeling.DSL.FromDict.Class
    Science.Chemistry.IsotopicLabeling.FractionMatrix
    Science.Chemistry.IsotopicLabeling.FractionType
    Science.Chemistry.IsotopicLabeling.FractionTypeDict
    Science.Chemistry.IsotopicLabeling.FractionVector
    Science.Chemistry.IsotopicLabeling.Isotopomer
    Science.Chemistry.IsotopicLabeling.IsotopomerFractionMatrix
    Science.Chemistry.IsotopicLabeling.IsotopomerFractionVector
    Science.Chemistry.IsotopicLabeling.MassFraction
    Science.Chemistry.IsotopicLabeling.MassFractionMatrix
    Science.Chemistry.IsotopicLabeling.MassFractionVector
    Science.Chemistry.IsotopicLabeling.SteadyState
    Science.Chemistry.MetaboliteVar
    Science.Chemistry.Parser.Text
    Science.Chemistry.Reaction
    Science.Chemistry.ReactionNetwork
    Science.Chemistry.Stoichiometry
    Science.Chemistry.Types
    System.Log.Logger.Instances
    Text.PrettyPrint.Leijen.Text.Instances
  
  cpp-options:
    -traditional
  
  ghc-options:
    -Wall -fwarn-tabs -O2 -fdicts-cheap -funbox-strict-fields -fmax-simplifier-iterations=10 -threaded
  
  hs-source-dirs:
    src
  
  default-language:
    Haskell2010

library
  build-depends:
    aeson                >= 0.7.0.5  && < 0.12,
    attoparsec           == 0.13.*            ,
    base                 >= 4.8      && < 4.9 ,
    bifunctors           >= 5        && < 6   ,
    bytestring           >= 0.10.4.0 && < 0.11,
    cassava              >= 0.4.0.0  && < 0.5 ,
    comonad              >= 4        && < 6   ,
    containers           >= 0.4.0    && < 0.6 ,
    data-default         >= 0.5               ,
    fgl                  >= 5.5.0.0  && < 5.6 ,
    glpk-hs              >= 0.3      && < 0.4 ,
    hmatrix              >= 0.12     && < 0.17,
    lens                 >= 4.4      && < 5   ,
    levmar               >= 1.2      && < 1.3 ,
    logger               >= 0.1.0.1  && < 0.2 ,
    mtl                  >= 2.1      && < 2.3 ,
    MonadRandom          >= 0.4      && < 0.5 ,
    monad-parallel       >= 0.7      && < 0.8 ,
    parallel             >= 3.2      && < 3.3 ,
    profunctors          == 5.*               ,
    random               >= 1        && < 2   ,
    statistics           >= 0.13     && < 0.14,
    text                 >= 1.1.1.3           ,
    transformers         >= 0.3      && < 0.5 ,
    vector               >= 0.10     && < 0.11,
    unordered-containers >= 0.2.5.0  && < 0.3 ,
    wl-pprint-text       >= 1.1      && < 1.2 ,
    zip-archive          >= 0.2.3    && < 0.3
  
  exposed-modules:
    Control.Comonad.Trans.Rall
    Control.Monad.Random.Instances
    Data.Functor.Classes.Monoid1
    Data.Graph.Inductive.Graph.Extras.Node
    Data.Graph.Inductive.Graph.Extras.Node.Strict
    Data.Graph.Inductive.Graph.Instances
    Data.Graph.Inductive.Graph.Lens
    Data.Graph.Inductive.Query.DFS.EdgeSmoothing
    Data.Graph.Inductive.Query.DFS.Subgraph
    Data.Injective
    Data.List.Extras
    Data.Monoid.CartProduct
    Data.Monoid.Conv
    Data.Monoid.Conv2
    Data.Monoid.EndoM
    Data.Monoid.Kronecker
    Language.FluxJS.Conversion.Text
    Language.FluxJS.Types
    Language.INCA.Constants
    Language.INCA.Conversion.Text
    Language.INCA.Parser.Text
    Language.INCA.Types
    MFAPipe.Banner
    MFAPipe.Command
    MFAPipe.Csv.Constants
    MFAPipe.Csv.Types.ContributionMatrix
    MFAPipe.Csv.Types.EMUReactionNetwork
    MFAPipe.Csv.Types.Flux
    MFAPipe.Csv.Types.FluxCovarianceMatrix
    MFAPipe.Csv.Types.Info
    MFAPipe.Csv.Types.IsotopomerFractionVector
    MFAPipe.Csv.Types.JacobianMatrix
    MFAPipe.Csv.Types.MassFractionVector
    MFAPipe.Csv.Types.NullspaceMatrix
    MFAPipe.Csv.Types.ObjectiveFunction
    MFAPipe.Csv.Types.ReactionNetwork
    MFAPipe.Csv.Types.Residual
    MFAPipe.Csv.Types.Statistics
    MFAPipe.Csv.Types.Stoichiometry
    MFAPipe.FBA
    MFAPipe.MFA
    MFAPipe.Utils
    MFAPipe.Version
    MFAPipe.Warranty
    Numeric.LevMar.Extras.LevMar
    Numeric.LinearAlgebra.HMatrix.Algorithms.GaussJordan
    Numeric.LinearAlgebra.HMatrix.Lens
    Science.Chemistry.EMU
    Science.Chemistry.EMU.EMU
    Science.Chemistry.EMU.EMUGraph
    Science.Chemistry.EMU.EMUReaction
    Science.Chemistry.EMU.EMUReactionNetwork
    Science.Chemistry.EMU.Factorized.Class
    Science.Chemistry.EMU.HasSize.Class
    Science.Chemistry.EMU.IsotopicLabeling.DSL.Evaluate.Class
    Science.Chemistry.EMU.IsotopicLabeling.SteadyState
    Science.Chemistry.EMU.Optimized.Class
    Science.Chemistry.FluxVar
    Science.Chemistry.IsotopicLabeling
    Science.Chemistry.IsotopicLabeling.DSL.Display.Class
    Science.Chemistry.IsotopicLabeling.DSL.FromDict.Class
    Science.Chemistry.IsotopicLabeling.FractionMatrix
    Science.Chemistry.IsotopicLabeling.FractionType
    Science.Chemistry.IsotopicLabeling.FractionTypeDict
    Science.Chemistry.IsotopicLabeling.FractionVector
    Science.Chemistry.IsotopicLabeling.Isotopomer
    Science.Chemistry.IsotopicLabeling.IsotopomerFractionMatrix
    Science.Chemistry.IsotopicLabeling.IsotopomerFractionVector
    Science.Chemistry.IsotopicLabeling.MassFraction
    Science.Chemistry.IsotopicLabeling.MassFractionMatrix
    Science.Chemistry.IsotopicLabeling.MassFractionVector
    Science.Chemistry.IsotopicLabeling.SteadyState
    Science.Chemistry.MetaboliteVar
    Science.Chemistry.Parser.Text
    Science.Chemistry.Reaction
    Science.Chemistry.ReactionNetwork
    Science.Chemistry.Stoichiometry
    Science.Chemistry.Types
    System.Log.Logger.Instances
    Text.PrettyPrint.Leijen.Text.Instances
  
  cpp-options:
    -traditional
  
  ghc-options:
    -Wall -fwarn-tabs -O2 -fdicts-cheap -funbox-strict-fields -fmax-simplifier-iterations=10 -threaded
  
  hs-source-dirs:
    src
  
  default-language:
    Haskell2010
