name:                MonadRandom-logger-instances
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:
license:             OtherLicense
license-file:        LICENSE
author:              Mark Borkum
maintainer:          mark.borkum@pnnl.gov
copyright:           2016-17 Pacific Northwest National Laboratory
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Random.Logger.Instances
  build-depends:       base >= 4.7 && < 5
                     , MonadRandom == 0.4.2.3
                     , MonadRandom-instances
                     , logger == 0.1.0.2
                     , mtl >= 2.1 && < 2.3
                     , transformers >= 0.3 && < 0.6
  default-language:    Haskell2010
