name:                fgl-lens
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:
license:             OtherLicense
license-file:        LICENSE
author:              Mark Borkum
maintainer:          mark.borkum@pnnl.gov
copyright:           2016-17 Pacific Northwest National Laboratory
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Graph.Inductive.Graph.Lens
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.4.0 && < 0.5.8
                     , fgl == 5.5.3.1
                     , lens == 4.13
                     , mtl >= 2.0.1 && < 2.3
                     , transformers >= 0.2 && < 0.5
  default-language:    Haskell2010
