name:                hmatrix-monoids
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:
license:             OtherLicense
license-file:        LICENSE
author:              Mark Borkum
maintainer:          mark.borkum@pnnl.gov
copyright:           2016-17 Pacific Northwest National Laboratory
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Monoid.CartProduct
                     , Data.Monoid.Conv
                     , Data.Monoid.Conv2
                     , Data.Monoid.Kronecker
  build-depends:       base >= 4.7 && < 5
                     , hmatrix
  default-language:    Haskell2010
